# wuyang_WS

./: Dockerfile  README.md  compose.yml
.devcontainer/: devcontainer.json
install/: local_setup.sh  setup.sh
install/wuyang_description/share/wuyang_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/wuyang_description/share/wuyang_description/launch/: display.launch.py
install/wuyang_description/share/wuyang_description/urdf/: gazebo_control.urdf.xacro  sensor_camera.urdf.xacro  wuyang_ackermann.urdf.xacro  wuyang_arkermann.gv  wuyang_arkermann.urdf.xacro
log/: latest_build
src/polygon_base/: CMakeLists.txt  package.xml
src/polygon_base/src/: area_node.cpp
src/polygon_plugins/: CMakeLists.txt  package.xml  plugins.xml
src/polygon_plugins/src/: polygon_plugins.cpp
src/wheeltec_wuyang_nav2/: CMakeLists.txt  package.xml
src/wheeltec_wuyang_nav2/config/: waypoints.yaml
src/wheeltec_wuyang_nav2/docs/: real_car_nav2_only_odom.md
src/wheeltec_wuyang_nav2/launch/: bringup_launch.py  bringup_odom_launch.py  save_map.launch.py  sequential_nav.launch.py  wheeltec_nav2.launch.py
src/wheeltec_wuyang_nav2/map/: WHEELTEC.yaml
src/wheeltec_wuyang_nav2/param/wheeltec_demo_params/: param_mini_4wd_DWB.yaml  param_mini_akm_RPP.yaml  param_mini_diff_DWB.yaml  param_mini_mec_DWB.yaml
src/wheeltec_wuyang_nav2/param/wheeltec_params/: param_brushless_senior_diff.yaml  param_flagship_4wd_bs.yaml  param_flagship_4wd_dl.yaml  param_flagship_four_wheel_diff_dl.yaml  param_flagship_mec_dl.yaml  param_four_wheel_diff_bs.yaml  param_mini_4wd.yaml  param_mini_akm.yaml  param_mini_diff.yaml  param_mini_mec.yaml  param_mini_omni.yaml  param_mini_tank.yaml  param_odom_akm.yaml  param_senior_4wd_bs.yaml  param_senior_4wd_dl.yaml  param_senior_akm.yaml  param_senior_diff.yaml  param_senior_mec_EightDrive.yaml  param_senior_mec_bs.yaml  param_senior_mec_dl.yaml  param_top_4wd_bs.yaml  param_top_4wd_dl.yaml  param_top_akm_bs.yaml  param_top_akm_dl.yaml  param_top_mec_EightDrive.yaml  param_top_mec_bs.yaml  param_top_mec_dl.yaml  wheeltec_diff_mppi_demo.yaml  wheeltec_mec_mppi_demo.yaml
src/wheeltec_wuyang_nav2/rviz/: wheeltec.rviz
src/wheeltec_wuyang_nav2/src/: cmd_vel_interceptor.cpp  sequential_navigator.cpp
src/wuyang_description/: CMakeLists.txt  package.xml
src/wuyang_description/config/: ackermann_controller.yaml  nav2_params.yaml  rtabmap.yaml  slam_toolbox_mapping.yaml  waypoints.yaml
src/wuyang_description/docs/: deploy_to_real_robot.md  for_gazebo_sync.md  gazebo_sim_sync.md  gazebo_sim_sync_test.md  sequential_navigation.md
src/wuyang_description/laser_map/: map.yaml
src/wuyang_description/launch/: display.launch.py  gazebo.launch.py  nav.launch.py  sequential_nav.launch.py  slam.launch.py  vslam.launch.py
src/wuyang_description/map/: map.pgm
src/wuyang_description/maps/camera_map/: camera_nav_map.pgm  camera_nav_map.yaml
src/wuyang_description/maps/laser_map/: wheeltec_map.pgm  wheeltec_map.yaml
src/wuyang_description/rviz2/: nav2_only_odom.rviz  real2sim.rviz
src/wuyang_description/scripts/: cmd_vel_to_ackermann.py  twist_to_ackermann.py
src/wuyang_description/src/: cmd_vel_bridge.cpp  cmd_vel_monitor.cpp  sequential_navigator.cpp
src/wuyang_description/urdf/: full.urdf  gazebo_control.urdf.xacro  sensor_camera.urdf.xacro  sensor_laser.urdf.xacro  wuyang_ackermann.gv  wuyang_ackermann.urdf.xacro  wuyang_arkermann.urdf.xacro
src/wuyang_description/world/: my_world  wheeltec_world  wuyang_world
