<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wheeltec_wuyang_nav2</name>
  <version>0.0.0</version>
  <description>Wheeltec mini_akm 真车导航包（纯里程计定位 + 顺序导航）</description>
  <maintainer email="1481435954@qq.com">wuyang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Nav2 导航框架 -->
  <depend>nav2_bringup</depend>

  <!-- sequential_navigator C++ 节点依赖 -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- 运行时：底盘驱动和传感器（小车上已安装） -->
  <exec_depend>turn_on_wheeltec_robot</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
