<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wuyang_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1481435954@qq.com">wuyang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- cmd_vel_bridge / cmd_vel_monitor C++ 节点依赖 -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- cmd_vel_monitor Qt5 GUI 依赖 -->
  <depend>qtbase5-dev</depend>

  <!-- 机器人描述与状态发布 -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <!-- Gazebo 仿真 -->
  <exec_depend>gazebo_ros</exec_depend>

  <!-- ros2_control 控制器 -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>ackermann_steering_controller</exec_depend>

  <!-- SLAM 建图 -->
  <exec_depend>slam_toolbox</exec_depend>

  <!-- Nav2 导航 -->
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>

  <!-- 视觉 SLAM（备用） -->
  <exec_depend>rtabmap_ros</exec_depend>

  <!-- 话题工具 -->
  <exec_depend>topic_tools</exec_depend>

  <!-- 键盘遥控 -->
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>xterm</exec_depend>

  <!-- 可视化 -->
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>
